fixed gaps

--- a/src/CSS/Card.css
+++ b/src/CSS/Card.css
@@ -3,7 +3,7 @@
     border: 1px solid rgba(255, 255, 255, 0.15);
     cursor: pointer;
     width: 100%;
-    max-width: 25rem;
+    max-width: 30rem;
     transition: 0.7s;
 }
 a{
