--- a/src/CSS/Hub.css
+++ b/src/CSS/Hub.css
@@ -40,6 +40,7 @@
     margin-bottom: 2rem;
     border: 0;
     width: 100%;
+    transition: 0.2s;
 }
 
 .main-div-button:hover {
@@ -62,9 +63,9 @@
 }
 
 .main-div-text-box {
-    margin-bottom: 1rem;
+    margin-bottom: 2rem;
     text-align: center;
-    width: 70%;
+
 }
 
 .card-grid {
@@ -80,7 +81,7 @@
 }
 
 .mobile-header-corner {
-    width: 5rem;
+    width: 4rem;
     height: 100%;
     display: flex;
     background: #FFFFFF;
@@ -93,8 +94,8 @@
     filter: invert(100%);
 }
 .main-content{
-    margin-top: 6rem;
-    margin-inline: 2rem;
+    margin-top: 7.5rem;
+    margin-inline: 3.5rem;
     width: -moz-available;
     width: -webkit-fill-available;
     width: fill-available;
