--- a/src/CSS/Info.css
+++ b/src/CSS/Info.css
@@ -46,7 +46,7 @@
 }
 
 .info-header-back-logo {
-    width: 13%;
+    width: 1rem;
 }
 
 .info-header-div {
@@ -199,7 +199,6 @@
 }
 
 .info-link {
-    margin-top: 2rem;
     width: 100%;
     height: 5rem;
     border: 1px solid rgba(255, 255, 255, 0.5);
@@ -219,7 +218,7 @@
     background-color: white;
 }
 
-@media (max-width:767px) {
+@media (max-width:999px) {
     .info-main {
         flex-direction: column;
     }
@@ -246,42 +245,27 @@
         height: calc(50% - 4rem);
         display: flex;
     }
-    .info-description{
-        margin-top: 1rem;
-    }
+
 
     .info-description p {
-        margin: 0.5rem;
+        margin: 2rem;
     }
 
-    .info-tier{
-        margin-top: 1rem;
-        height: auto;
-    }
     .info-tier h3{
-        margin-top: 0.3rem;
+        margin-top: 0.5rem;
         margin-bottom: 0;
     }
 
-    .info-quantity{
-        margin-top: 1rem;
-        height: auto;
-    }
     .info-quantity h3{
-        margin-top: 0.3rem;
+        margin-top: 0.5rem;
         margin-bottom: 0;
     }
 
-    .info-link{
-        margin-block: 1rem;
-        height: auto;
-        min-height: 2.5rem;
-    }
     .info-mobile-group{
         display: flex;
         justify-content: space-between;
         align-items: center;
-        margin-top: 1rem;
+        margin-top: 1.5rem; 
     }
     .info-main-right-owned{
         height: 1.5rem;
@@ -295,7 +279,7 @@
         font-size: 10px;
     }
     .text-white{
-        margin: 0.3rem 2rem;
+        margin: 0.5rem 2rem;
     }
     .info-left-main img{
         max-width: fit-content;
@@ -306,7 +290,7 @@
         display: flex;
         flex-direction: column;
         height: 100%;
-        justify-content: space-evenly;
+        justify-content: flex-start;
     }
 
     .info-main-right-block h1 {
@@ -315,7 +299,7 @@
     }
 
     .info-header-back-logo {    
-        width: 20%;
+        height: 25%;
     }
     .green-box img{
         width: 50%;
